--- a/.cproject
+++ b/.cproject
@@ -33,6 +33,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/BMP180_Breakout_Arduino_Library-master}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/BMP180_Breakout_Arduino_Library-master/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/Grove_Barometer_Sensor-master}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/EEPROM}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/EEPROM/src}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.cpp.sketch.input.1213072048" name="CPP source files" superClass="io.sloeber.compiler.cpp.sketch.input"/>
 							</tool>
@@ -52,6 +54,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/BMP180_Breakout_Arduino_Library-master}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/BMP180_Breakout_Arduino_Library-master/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/Grove_Barometer_Sensor-master}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/EEPROM}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/EEPROM/src}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.c.sketch.input.367353858" name="C Source Files" superClass="io.sloeber.compiler.c.sketch.input"/>
 							</tool>
@@ -71,6 +75,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/BMP180_Breakout_Arduino_Library-master}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/BMP180_Breakout_Arduino_Library-master/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/Grove_Barometer_Sensor-master}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/EEPROM}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LPWeather/libraries/EEPROM/src}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.S.sketch.input.138284005" name="Assembly source files" superClass="io.sloeber.compiler.S.sketch.input"/>
 							</tool>
